<resources>
    <string name="app_name">BookClubApp</string>
    <string name="user_data">Логин или почта</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="greeting">greeting</string>
    <string name="register">Присоединиться</string>
    <string name="skip">Пропустить</string>
    <string name="instructionRegistration">Все поля обязательны для заполнения</string>
    <string name="name">Имя</string>
    <string name="fakename">Логин</string>
    <string name="email">Почта</string>
    <string name="repeatPassword">Повторите пароль</string>
    <string name="registerNow">Зарегистрироваться</string>
    <string name="enter">Поехали!</string>
    <string name="book_club_name">Ловцы слов</string>
    <string name="book_club">книжный клуб</string>
    <string name="lists">Списки</string>
    <string name="tasks">Задачи</string>
    <string name="budget">Финансы</string>
    <string name="list_header">Лаборатория</string>
    <string name="book">книги</string>
    <string name="meeting">встречи</string>
    <string name="user">люди</string>
    <string name="out">Выйти</string>
    <string name="add">Добавить</string>
    <string name="expenses">Расходы</string>
    <string name="incomes">Доходы</string>
    <string name="no_incomes">Нет ни одного дохода</string>
    <string name="back">back</string>
    <string name="aboutclub" />
    <string name="aboutclub_a">О клубе</string>
    <string name="how1">Как происходит обсуждение?</string>
    <string name="how2">Что такое квест-карта?</string>
    <string name="texthow1">После определения книги для встречи мы собираемся в коворкинге уютной компанией и погружаемся в общение под горячий чай и вкусное печенье. Дискуссии регулируются с помощью специальных игральных карт, чтобы все желающие имели возможность поделиться своими мыслями</string>
    <string name="how3">Условия участия во встречах</string>
    <string name="textaboutclub">Ловцы слов — книжный клуб в игровом формате. Каждый месяц путём голосования мы выбираем книгу, собираемся в коворкинге Москвы и обсуждаем её! Кроме того, организаторы составляют уникальные литературные квест-карты, чтобы сделать Ваше путешествие по миру книг увлекательнее!</string>
    <string name="texthow2">Квест-карта — это небольшой опросник по нескольким коротким литературным произведениям. Каждые три месяца мы составляем новую карту в определенном жанре и даем возможность каждому участнику клуба, посетившего встречу, приобрести ее. По прохождении квест-карты и посещении 3 встреч клуба вас ждет приятный презент в виде сюрприз-бокса!</string>
    <string name="texthow3">Для участия во встрече вам необходимо записаться на нее. Для этого требуется внести предоплату - это можно сделать на Главной странице нашего приложения. Торопитесь, количество мест ограничено!</string>
    <string name="textmainwindow">Главная страница</string>
</resources>