<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"

            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <ImageView
                android:id="@+id/imageGreeting"
                android:contentDescription="@string/greeting"

                android:layout_width="250dp"
                android:layout_height="250dp"
                android:src="@drawable/greeting"
                />

            <LinearLayout
                android:id="@+id/LoginOrRegister"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                >

                <Button
                    android:id="@+id/btnLogin"
                    android:text="@string/login"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:layout_marginEnd="2dp"

                    android:textColor="@color/purple"
                    app:strokeColor="@color/purple"
                    app:strokeWidth="1dp"
                    android:backgroundTint="@color/white"
                    android:textSize="15sp"
                    android:fontFamily="sans-serif-medium"
                    style="@style/Widget.AppCompat.ButtonBar"
                    />

                <Button
                    android:id="@+id/btnRegister"
                    android:text="@string/register"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:layout_marginStart="2dp"

                    android:backgroundTint="@color/purple"
                    android:textSize="15sp"
                    android:fontFamily="sans-serif-medium"
                    style="@style/Widget.AppCompat.ButtonBar"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/instructionRegistration"
                />

            <LinearLayout
                android:id="@+id/InputForms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/userNameInputLayout"
                    android:hint="@string/name"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"

                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/userFakenameInputLayout"
                    android:hint="@string/fakename"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"

                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/userEmailInputLayout"
                    android:hint="@string/email"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"

                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/userPasswordInputLayout"
                    android:hint="@string/password"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"

                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/userPasswordCheckInputLayout"
                    android:hint="@string/repeatPassword"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"

                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btnJoin"
                android:text="@string/registerNow"

                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_marginTop="30dp"

                android:backgroundTint="@color/purple"
                android:textSize="15sp"
                android:fontFamily="sans-serif-medium"
                style="@style/Widget.AppCompat.ButtonBar"
                />

            <LinearLayout
                android:id="@+id/skipEnterLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:layout_marginBottom="60dp"
                >

                <ImageView
                    android:id="@+id/imageGreeting2"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/greeting"
                    android:src="@drawable/greeting2"
                    />

                <Button
                    android:id="@+id/btnSkip"
                    android:text="@string/skip"

                    android:layout_width="150dp"
                    android:layout_height="70dp"
                    android:backgroundTint="#79FFFFFF"

                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/purple"
                    android:textSize="16sp"
                    style="@style/Widget.AppCompat.ButtonBar"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>